Add typehints (#3)
* add grammar with type hints and +

* Create sum.clj

* typehints and new scheme

короче done is better than nothing
даже не perfect

* add transpiled samples

* yes it is all in one commit; so what

* specify java version (#4)

https://docs.gradle.org/current/userguide/building_java_projects.html

Co-authored-by: Dmitriy Krasnov <dekrasnov@avito.ru>

* add grammar with type hints and +

* Create sum.clj

* typehints and new scheme

короче done is better than nothing
даже не perfect

* add transpiled samples

* yes it is all in one commit; so what

* review fixes

---------

Co-authored-by: Dmitriy Krasnov <43964259+peyuaa@users.noreply.github.com>
Co-authored-by: Dmitriy Krasnov <dekrasnov@avito.ru>